After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 712338 - SIGSEGV: Toggling 'top switch' while from On to Off
SIGSEGV: Toggling 'top switch' while from On to Off
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Sharing
3.10.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-11-14 21:56 UTC by Dominique Leuenberger
Modified: 2013-11-14 23:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
sharing: Fix crash when turning off Sharing (1.11 KB, patch)
2013-11-14 23:00 UTC, Bastien Nocera
committed Details | Review

Description Dominique Leuenberger 2013-11-14 21:56:32 UTC
Situation: gnome-control-center 3.10.2, with patch from
https://bugzilla.gnome.org/show_bug.cgi?id=712252 applied

Reproduce:
* start g-c-c sharing
* If not on, Toggle 'On' (top switch).
* Toggle 'off' again (irrespective of sub items status)
=> crash

on CLI, it reports:
sharing-cc-panel:ERROR:cc-sharing-panel.c:55:_gtk_builder_get_widget: assertion failed: (w != NULL)
Aborted (core dumped)


And a stack trace:
(gdb) bt
  • #0 __GI_raise
    at ../nptl/sysdeps/unix/sysv/linux/raise.c line 56
  • #1 __GI_abort
    at abort.c line 89
  • #2 _g_log_abort
    at gmessages.c line 255
  • #3 g_assertion_message
  • #4 g_assertion_message_expr
    at gtestutils.c line 2293
  • #5 ??
  • #6 ??
  • #7 g_closure_invoke
    at gclosure.c line 777
  • #8 signal_emit_unlocked_R
    at gsignal.c line 3586
  • #9 g_signal_emit_valist
    at gsignal.c line 3330
  • #10 g_signal_emit
    at gsignal.c line 3386
  • #11 g_object_dispatch_properties_changed
    at gobject.c line 1047
  • #12 g_object_notify_by_spec_internal
    at gobject.c line 1141
  • #13 g_object_notify_by_pspec
    at gobject.c line 1245
  • #14 gtk_switch_set_active
    from /usr/lib64/libgtk-3.so.0
  • #15 ??
    from /usr/lib64/libgtk-3.so.0
  • #16 ??
    from /usr/lib64/libgtk-3.so.0
  • #17 _g_closure_invoke_va
    at gclosure.c line 840
  • #18 g_signal_emit_valist
    at gsignal.c line 3238
  • #19 g_signal_emit
    at gsignal.c line 3386
  • #20 ??
    from /usr/lib64/libgtk-3.so.0
  • #21 ??
    from /usr/lib64/libgtk-3.so.0
  • #22 gtk_main_do_event
    from /usr/lib64/libgtk-3.so.0
  • #23 ??
    from /usr/lib64/libgdk-3.so.0
  • #24 g_main_dispatch
    at gmain.c line 3065
  • #25 g_main_context_dispatch
    at gmain.c line 3641
  • #26 g_main_context_iterate
    at gmain.c line 3712
  • #27 g_main_context_iteration
    at gmain.c line 3773
  • #28 g_application_run
    at gapplication.c line 1635
  • #29 main

Comment 1 Bastien Nocera 2013-11-14 23:00:50 UTC
Created attachment 259845 [details] [review]
sharing: Fix crash when turning off Sharing

Another fallout from:
05a4f6d3d9620782fa5d1a279ef84c11701247d1
Comment 2 Bastien Nocera 2013-11-14 23:02:25 UTC
Attachment 259845 [details] pushed as f5ec0cd - sharing: Fix crash when turning off Sharing