sharing: Fix crash when turning off Sharing

Another fallout from:
05a4f6d3d9620782fa5d1a279ef84c11701247d1

https://bugzilla.gnome.org/show_bug.cgi?id=712338